--- a/food/Position.css
+++ b/food/Position.css
@@ -1,15 +1,15 @@
 .container{
 
-    width: 500px;
-    height: 300px;
+    /* width: 500px;
+    height: 300px; */
 }
 img{
     width: 100%;
 }
 .child1{
   
-    width: 500px;
-    height: 300px;
+    /* width: 500px;
+    height: 300px; */
 }
 p{
     color: white;
