--- a/food/Position.css
+++ b/food/Position.css
@@ -10,16 +10,45 @@ img{
   
     /* width: 500px;
     height: 300px; */
-}
-p{
+} 
+ p{
     color: white;
+    font: size 500 0px;
     position: absolute;
-    top: 150px;
-    left: 200px;
+    top: 50%;
+    left: 40%;
+    font-size: 50px;
     
 }
 b{
     background-color: black;
-    padding: 2px;
+    padding: 4px;
+    color: aliceblue;
+    
    
+}
+.childContainer1{
+         /* border: 2px solid rgba(18, 137, 74, 0.449); */
+         display: flex;
+        
+
+}
+.childContainer2{
+         /* border: 2px solid rgba(18, 137, 74, 0.449); */
+
+}
+.child{
+    /* border: 2px solid blue; */
+    height: 300px;
+    width: 350px;
+    padding-right: 20px;
+    position: relative;
+}
+h3{
+    background-color: black;
+    color: aliceblue;
+    position: absolute;
+    top: 0px;
+    margin: 0px;
+    padding: 5px;
 }
