--- a/food/instachat.css
+++ b/food/instachat.css
@@ -4,31 +4,32 @@
     height: 400px;
     width: 200px;
     border-radius: 10px;
-    /* position: relative; */
-    /* bottom: 0px; */
     overflow: scroll;
     scrollbar-width: none;
     position: relative;
     left: 300px;
-    
+    background-image: url(https://images.unsplash.com/photo-1505142468610-359e7d316be0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D);
+    background-size: cover;
 }
 .navbar{
-    background-color: rgba(7, 158, 7, 0.913);
+    background-color: rgb(16, 132, 16);
     width: 200px;
     height: 60px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     position: fixed;
-    /* top: 0px; */
+    z-index: 1;
 }
 i{
     color: rgb(3, 17, 28);
+    
     /* background-color: rgb(215, 22, 22); */
      display: inline-block;
      font-size: 8px;  
 }
 .image{
-    background-color: rgba(216, 70, 17, 0.872);
+    background-color:white;
+    border: 0.5px solid black;
     height: 20px;
     width: 20px;
      display: inline-block;
@@ -36,11 +37,12 @@ i{
     position: absolute;
     bottom: 5px;
 }
-img{
+.image img{
     width: 100%;
     border-radius: 100px;
    
 }
+
 h1{
     color: aliceblue;
     font-size: 15px;
@@ -65,9 +67,6 @@ h4{
     border-top-right-radius: 50px; */
     padding-top: 30px;
     height: 30px;
-    /* position: absolute; */
-    /* top: 0px; */
-    
 }
 #a1{
      margin-left: 5px;
@@ -75,12 +74,8 @@ h4{
 #a2{
      margin-left: 25px;
 }
-#a1,#a2,#a3,#a4{
-   
-}
 #a5{
     width: 100%;
-    /* padding-bottom: 10px; */
     position: absolute;
     top: 3px;
 }
@@ -89,11 +84,6 @@ h4{
 }
 .footer{
     background-color:white;
-    /* border:1px solid black; */
-    /* height: 15px;
-    width: 200px;
-    position: fixed;
-    top: 0px; */
      width: 100%;
     height: 20px;
     border-radius: 10px;
@@ -103,17 +93,16 @@ h4{
 }
 .send{
     text-align: right;
-    /* float: right; */
     position: absolute;
     left: 160px;
+    background-color: rgb(34, 147, 121);
 }
 .messages{
-    /* text-align: right; */
     width: fit-content;
 }
 small{
     font-size: 7px;
-    background-color: aquamarine;
+    background-color: rgb(217, 209, 165);
     border-radius: 50px;
     padding: 1px 3px 1px 3px;
     position: sticky;
@@ -121,13 +110,11 @@ small{
     overflow: scroll;
     scrollbar-width: none;
     left: 40%;
-    /* position: relative; */
 }
 p{
-    background-color: white;
+    background-color: rgb(32, 198, 216);
     border-radius: 50px;
     padding: 2px 5px 2px 5px;
-    /* display:inline-block;  */
     margin: 5px 0px 5px 0px;
     font-size: 8px;
 }
