--- a/food/test.css
+++ b/food/test.css
@@ -1,26 +1,55 @@
+/*.container{
+    width: 300px;
+    height: 300px;
+    /* border: 2px solid; 
+    border-radius: 50%;
+    position: relative;
+    top: 150px;
+    left: 200px;
+    background-color: white;
+}
+.child-1{
+    border: 2px solid red;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    border-radius: 50%;
+    position: relative;
+    top: 50px;
+    left: 50px;
+}
+.container-2{
+    border: 2px solid ;
+    background-color: green;
+    width: 800px;
+    height: 400px;
+} */
+
+.circle{
+    height: 200px;
+    width: 200px;
+    /* border: 2px solid black; */
+    border-radius: 100px;
+    position: relative;
+    left: 100px;
+    top: 100px ;
+    background-color: white;
+    
+
+}
+.incircle{
+     height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 50px;
+    background-color: red;
+    position: relative;
+    left: 25%;
+    top: 25%;
+}
 .rectangle{
     height: 200px;
     width: 400px;
     border: 2px solid black;
     background-color: green;
-    
-
-}
-/* .circle{
-    height: 100px;
-    width: 100px; border: 2px solid black;
-    background-color: red;
-    border-radius: 100px;
-    position: relative;
-    left: 180px;
-} */
-.halfcirle{
-     height: 200px;
-    width: 200px;
-    border: 2px solid black;
-    background-color: rgb(245, 244, 244);
-    border-radius: 100px;
-   
-
-
 }
